added Energy Status

--- a/thermostat.html
+++ b/thermostat.html
@@ -18,6 +18,7 @@
       <a class ='up' href="#">+</a>
       <a class='down' href="#">-</a>
       <button type="button" name="button">Eco</button>
+      <p class='energy'>low-usage</p>
     </div>
   </div>
 
