--- a/thermostat.html
+++ b/thermostat.html
@@ -17,7 +17,8 @@
       <p>20</p>
       <a class ='up' href="#">+</a>
       <a class='down' href="#">-</a>
-      <button type="button" name="button">Eco</button>
+      <button class="eco" type="button" name="powerSavingMode">Eco</button>
+      <button class="reset" type="button" name="Reset">Reset</button>
       <p class='energy'>low-usage</p>
     </div>
   </div>
