Add energy status visuals

--- a/thermostat.html
+++ b/thermostat.html
@@ -19,7 +19,7 @@
       <a id="temp_down" class='down' href="#">-</a>
       <button id="eco" class="eco" type="button" name="powerSavingMode">Eco</button>
       <button id="reset" class="reset" type="button" name="Reset">Reset</button>
-      <p class='energy'><a id="usage"</a></p>
+      <p id="usage" class='energy'></p>
     </div>
   </div>
 <script src="src/thermostat.js"></script>
