Add weather API

--- a/thermostat.html
+++ b/thermostat.html
@@ -27,4 +27,14 @@
 <script src="src/interface.js"></script>
 </body>
 
+<center><section>
+  <h2>Current temperature: <span id="current-temperature"></span></h2>
+  <select id="current-city">
+  <option value="london">London</option>
+  <option value="newyork">New York</option>
+  <option value="paris">Paris</option>
+  <option value="tokyo">Tokyo</option>
+</select>
+</section>
+
 </html>
